--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-runtime": "^5.8.25",
+    "fetch-everywhere": "^1.0.5",
     "lodash.isplainobject": "^3.2.0"
   },
   "devDependencies": {
